@@ -1,0 +1,3 @@
+usr/share/doc/lmbench-doc/man/lmbench.8 usr/share/doc/lmbench-doc/man/hello.8
+usr/share/doc/lmbench-doc/man/lmbench.8 usr/share/doc/lmbench-doc/man/flushdisk.8
+usr/share/doc/lmbench-doc/man/lmbench.8 usr/share/doc/lmbench-doc/man/memsize.8
