@@ -1,0 +1,2 @@
+usr/share/man/man8/lmbench.8.gz usr/share/man/man8/lmhttp.8.gz
+usr/share/man/man8/lmbench.8.gz usr/share/man/man8/msleep.8.gz
