@@ -1,0 +1,2 @@
+debian/lmbench-run.1
+debian/manpages/*
